--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,6 +46,9 @@ main {
   flex-direction: column;
   align-items: center;
   width: 100%;
+  h1 {
+    display: none;
+  }
   .logo {
     display: flex;
     justify-content: center;
